objects/z_SchemaTemp__c.object
<CustomObject>
    <description>Created by the Metadata API</description>
    <fields>
        <fullName>fieldname__c</fullName>
        <label>fieldname</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>objid__c</fullName>
        <label>objid</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>objname__c</fullName>
        <label>objname</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <label>z_SchemaTemp</label>
    <nameField>
        <label>z_SchemaTemp</label>
        <type>Text</type>
    </nameField>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>